--- a/problem1dynamicsubmit.qmd
+++ b/problem1dynamicsubmit.qmd
@@ -2,6 +2,10 @@
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. Please note at this time that the figure displays incorrect values. This will be corrected when drawn by the graphic artist.
 
+$$
+x=\frac{5}{723}
+$$
+
 ## Problem Image
 
 ![Figure 1: Three traffic light installation with loads](images/stoplights.png){fig-alt="Picture with three distinct traffic lights oriented along the same horizontal beam. Moving from left to right of the image, the first light A is at the end of the beam, the second light B is 4 ft from A, the third light C is 4 ft from light B, and light C is 7 ft from where the horizontal beam meets the vertical post (called post O). The free body diagram includes a downforce force acting on light A with a value of 65 pounds, a downward force acting on light B with a value of 50 points, a downward force acting on light C with a value of 50 pounds, and a reaction Moment M and Force N at the post at O."}
