--- a/problem1static.qmd
+++ b/problem1static.qmd
@@ -17,14 +17,14 @@ This demonstrates a worked out solution to the problem. The best way to begin is
 Use equilibrium equations to find the internal loads:
 
 $$
-\Sigma F_y=0: N-65-50-50=0\\
+\Sigma F_y=0: N-65-50-50=0
 $$
 $$N=165~lbs
 $$
 
 $$
 \Sigma M_O=0: -M+(50\times7)+(50\times11)+(65\times15)=0
-\\$$
+$$
 $$
 M=1875~lb\cdot ft=22500~lb\cdot in
 $$
@@ -33,7 +33,8 @@ Now, determine the cross-sectional properties:
 
 $$
 A=\pi(r_0^2-r_i^2)=\pi(2.5^2-2.3^2)=3.02~in^2
-\\
+$$
+$$
 I=
 \frac{\pi}{4}
 (r_0^4-r_i^4)=\frac{\pi}{4}(2.5^4-2.3^4)=8.70~in^4
