--- a/problem166dynamicsubmit.qmd
+++ b/problem166dynamicsubmit.qmd
@@ -5,7 +5,7 @@ This is a dynamic rendering of the problem with dynamic variables based on the u
 
 ## Problem Image
 
-![Figure 1: A crate is hanged on a circular solid metal rod.](images/391.png){fig-alt="Picture with a crate hanging on a circular solid metal rod. The crate is being help up by a cable on each side. The circular metal rod is between two walls"}
+![Figure 1: A crate is hanged on a circular solid metal rod.](images/391.png){fig-alt="Picture with a crate hanging on a circular solid metal rod. The crate is being help up by a cable on each side. The circular metal rod is between two walls."}
 
 ```{shinylive-python}
 #| standalone: true
@@ -17,6 +17,7 @@ import random
 import asyncio
 import io
 import math
+import string
 from datetime import datetime
 from pathlib import Path
 
@@ -77,32 +78,32 @@ def server(input, output, session):
           easy_close=True
         )
         ui.modal_show(m)
-    import random
-    import string
+    
 
 def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length))   
 
-random_start = generate_random_letters(4)  
+random_start = generate_random_letters(4)
+random_middle = generate_random_letters(4)
 random_end = generate_random_letters(4)    
 
-encoded_attempt = f"{random_start}{problem_ID}apoj{len(attempts)+1}{correct_indicator}{random_end}{input.ID()}"
+encoded_attempt = f"{random_start}{problem_ID}{random_middle}{len(attempts)+1}{correct_indicator}{random_end}{input.ID()}"
 
 
 attempts.append(f"{datetime.now()}, {encoded_attempt}\n")
 
-    @session.download(
-        filename=lambda: f"Problem_Log-{problem_ID}-{input.ID()}.csv"
-    )
-    async def download():
-        # This version uses a function to generate the filename. It also yields data
-        # multiple times.
-        yield "Timestamp,Encoded Attempt\n"
-   
-        for attempt in attempts:
-          await asyncio.sleep(0.25) 
-          yield attempt
+    # @session.download(
+    #     filename=lambda: f"Problem_Log-{problem_ID}-{input.ID()}.csv"
+    # )
+    # async def download():
+    #     # This version uses a function to generate the filename. It also yields data
+    #     # multiple times.
+    #     yield "Timestamp,Encoded Attempt\n"
+    # 
+    #     for attempt in attempts:
+    #       await asyncio.sleep(0.25) 
+    #       yield attempt
 
 app = App(app_ui, server)
 
