--- a/problem166dynamicsubmit.qmd
+++ b/problem166dynamicsubmit.qmd
@@ -22,10 +22,10 @@ from datetime import datetime
 from pathlib import Path
 
 problem_ID="166"
-W=reactive.Value(1)
-d1=reactive.Value(1)
-d2=reactive.Value(1)
-t=reactive.Value(1)
+W=reactive.Value("__")
+d1=reactive.Value("__")
+d2=reactive.Value("__")
+t=reactive.Value("__")
 
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
@@ -54,8 +54,8 @@ def server(input, output, session):
         random.seed(input.ID())
         W.set(random.randrange(4000, 9000, 100))
         d1.set(random.randrange(0.5, 3, 0.1))
-        d2.set(d1*3)
-        t.set(d1*2)
+        d2.set(d1()*3)
+        t.set(d1()*2)
 
     @reactive.Effect
     @reactive.event(input.submit)
