--- a/problem166dynamicsubmit.qmd
+++ b/problem166dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Dynamic Problem Statement {.unnumbered}
+# Problem 2.37 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: A crate is hanged on a circular solid metal rod.](images/391.png){fig-alt="Picture with a crate hanging on a circular solid metal rod. The crate is being help up by a cable on each side. The circular metal rod is between two walls."}
+![Figure 1: A crate is hanged on a circular solid metal rod.](images/166.png){fig-alt="Picture with a crate hanging on a circular solid metal rod. The crate is being help up by a cable on each side. The circular metal rod is between two walls."}
 
 ```{shinylive-python}
 #| standalone: true
@@ -27,6 +27,9 @@ d1=reactive.Value("__")
 d2=reactive.Value("__")
 t=reactive.Value("__")
 
+def generate_random_letters(length):
+    # Generate a random string of letters of specified length
+    return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
 
@@ -36,76 +39,80 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of ksi", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
 
 
 def server(input, output, session):
+    # Initialize a counter for attempts
+    attempt_counter = reactive.Value(0)
+
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"A crate of weight {W()} = lb hangs from a solid circular metal rod of diameter {d1()} = in.. The cable is wrapped around a support collar of diameter {d2()} = in. and thickness {t()} = in. to evenly distribute the cable load. What is the bearing stress on the support collar due to the rod? ")]
+        return[ui.markdown(f"A crate of weight W = {W()} lb hangs from a solid circular metal rod of diameter d<sub>1</sub> = {d1()} in.. The cable is wrapped around a support collar of diameter d<sub>2</sub> = {d2()} in. and thickness t = {t()} in. to evenly distribute the cable load. What is the bearing stress on the support collar due to the rod? ")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
         W.set(random.randrange(4000, 9000, 100))
-        d1.set(random.randrange(0.5, 3, 0.1))
-        d2.set(d1()*3)
-        t.set(d1()*2)
+        d1.set(random.randrange(5, 30, 1)/10)
+        d2.set(round(d1() * 3, 2))
+        t.set(round(d1() * 2, 2))
 
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
-        
-        instr= W()/(d1()*t())
-        #check=math.isclose(float(input.answer()),instr,rel_tol=0.001)
-        if math.isclose(float(input.answer()),instr,rel_tol=0.001):
-           check="*Correct*"
+        attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
+    
+        instr= (W()/(d1()*t()))/1000
+        if math.isclose(float(input.answer()), instr, rel_tol=0.001):
+            check = "*Correct*"
+            correct_indicator = "JL"
         else:
-           check="*Not Correct.*"
-        
-        
-        #correct_indicator = "JL" if check == "*Correct*" else "JG"
-        
-        feedback=ui.markdown(f"Your answer of {input.answer()} is {check}.  For reference in debugging this, the calculated instructor answer is {instr}")
-        attempts.append(f"{datetime.now()}, {input.submit()},{input.answer()},{check}\n")
-        m=ui.modal(
-          feedback,
-          title="Feedback",
-          easy_close=True
+            check = "*Not Correct.*"
+            correct_indicator = "JG"
+
+        # Generate random parts for the encoded attempt.
+        random_start = generate_random_letters(4)
+        random_middle = generate_random_letters(4)
+        random_end = generate_random_letters(4)
+        encoded_attempt = f"{random_start}{problem_ID}-{random_middle}{attempt_counter()}{correct_indicator}-{random_end}{input.ID()}"
+
+        # Store the most recent encoded attempt in a reactive value so it persists across submissions
+        session.encoded_attempt = reactive.Value(encoded_attempt)
+
+        # Append the attempt data to the attempts list without the encoded attempt
+        attempts.append(f"{datetime.now()}, {attempt_counter()}, {input.answer()}, {check}\n")
+
+        # Show feedback to the user.
+        feedback = ui.markdown(f"Your answer of {input.answer()} is {check}. For reference in debugging this, the calculated instructor answer is {instr}")
+        m = ui.modal(
+            feedback,
+            title="Feedback",
+            easy_close=True
         )
         ui.modal_show(m)
-    
 
-    # def generate_random_letters(length):
-    #   # Generate a random string of letters of specified length
-    #   return ''.join(random.choice(string.ascii_lowercase) for _ in range(length))   
-    # 
-    # random_start = generate_random_letters(4)
-    # random_middle = generate_random_letters(4)
-    # random_end = generate_random_letters(4)    
+    @session.download(filename=lambda: f"Problem_Log-{problem_ID}-{input.ID()}.csv")
+    async def download():
+        # Start the CSV with the encoded attempt (without label)
+        final_encoded = session.encoded_attempt() if session.encoded_attempt is not None else "No attempts"
+        yield f"{final_encoded}\n\n"
+        
+        # Write the header for the remaining CSV data once
+        yield "Timestamp,Attempt,Answer,Feedback\n"
+        
+        # Write the attempts data, ensure that the header from the attempts list is not written again
+        for attempt in attempts[1:]:  # Skip the first element which is the header
+            await asyncio.sleep(0.25)  # This delay may not be necessary; adjust as needed
+            yield attempt
 
-#encoded_attempt = f"{random_start}{problem_ID}{random_middle}{len(attempts)+1}{correct_indicator}{random_end}{input.ID()}"
 
-
-#attempts.append(f"{datetime.now()}, {encoded_attempt}\n")
-
-    # @session.download(
-    #     filename=lambda: f"Problem_Log-{problem_ID}-{input.ID()}.csv"
-    # )
-    # async def download():
-    #     # This version uses a function to generate the filename. It also yields data
-    #     # multiple times.
-    #     yield "Timestamp,Encoded Attempt\n"
-    # 
-    #     for attempt in attempts:
-    #       await asyncio.sleep(0.25) 
-    #       yield attempt
-
+# App installation
 app = App(app_ui, server)
 
 ```
