--- a/problem168dynamicsubmit.qmd
+++ b/problem168dynamicsubmit.qmd
@@ -1,4 +1,4 @@
-# Dynamic Problem Statement {.unnumbered}
+# Problem 2.23 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
@@ -17,8 +17,13 @@ import random
 import asyncio
 import io
 import math
+import string
 from datetime import datetime
 from pathlib import Path
+
+def generate_random_letters(length):
+    # Generate a random string of letters of specified length
+    return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
 problem_ID="168"
 L1=reactive.Value("__")
@@ -35,77 +40,83 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of psi", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
 
 
 def server(input, output, session):
+    # Initialize a counter for attempts
+    attempt_counter = reactive.Value(0)
+
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"A square bar of length {L1()} = in. and {L2()} = in. is pinned at one end and rests on a circular rod of diameter {d()} = in. A force {F()} =  lb is applied at the free end. What is the average shear stress in the circular rod? ")]
+        return[ui.markdown(f"A square bar of length L<sub>1</sub> = {L1()} in. and L<sub>2</sub> = {L2()} in. is pinned at one end and rests on a circular rod of diameter d = {d()} in. A force F = {F()} lb is applied at the free end. What is the average shear stress in the circular rod? ")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        L1.set(random.randrange(5, 15, 0.1))
-        L2.set(L1*1.4))
-        d.set(random.randrange(0.4, 0.9, 0.1))
+        L1.set(random.randrange(50, 150, 1)/10)
+        L2.set(round(L1() * 1.4, 2))
+        d.set(random.randrange(4, 9, 1)/10)
         F.set(random.randrange(30, 100, 1))
 
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
+        attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
+    
         M = F()*(L1()+L2())
         R = M/L1()
-        A = pi*(d()/2)**2
+        A = math.pi*(d()/2)**2
         instr= R/(2*A)
-        #check=math.isclose(float(input.answer()),instr,rel_tol=0.001)
-        if math.isclose(float(input.answer()),instr,rel_tol=0.001):
-           check="*Correct*"
+        if math.isclose(float(input.answer()), instr, rel_tol=0.001):
+            check = "*Correct*"
+            correct_indicator = "JL"
         else:
-           check="*Not Correct.*"
-        
-        correct_indicator = "JL" if check == "*Correct*" else "JG"
-        
-        feedback=ui.markdown(f"Your answer of {input.answer()} is {check}.  For reference in debugging this, the calculated instructor answer is {instr}")
-        attempts.append(f"{datetime.now()}, {input.submit()},{input.answer()},{check}\n")
-        m=ui.modal(
-          feedback,
-          title="Feedback",
-          easy_close=True
+            check = "*Not Correct.*"
+            correct_indicator = "JG"
+
+        # Generate random parts for the encoded attempt.
+        random_start = generate_random_letters(4)
+        random_middle = generate_random_letters(4)
+        random_end = generate_random_letters(4)
+        encoded_attempt = f"{random_start}{problem_ID}-{random_middle}{attempt_counter()}{correct_indicator}-{random_end}{input.ID()}"
+
+        # Store the most recent encoded attempt in a reactive value so it persists across submissions
+        session.encoded_attempt = reactive.Value(encoded_attempt)
+
+        # Append the attempt data to the attempts list without the encoded attempt
+        attempts.append(f"{datetime.now()}, {attempt_counter()}, {input.answer()}, {check}\n")
+
+        # Show feedback to the user.
+        feedback = ui.markdown(f"Your answer of {input.answer()} is {check}. For reference in debugging this, the calculated instructor answer is {instr}")
+        m = ui.modal(
+            feedback,
+            title="Feedback",
+            easy_close=True
         )
         ui.modal_show(m)
-    import random
-    import string
 
-def generate_random_letters(length):
-    # Generate a random string of letters of specified length
-    return ''.join(random.choice(string.ascii_lowercase) for _ in range(length))   
-
-random_start = generate_random_letters(4)  
-random_end = generate_random_letters(4)    
-
-encoded_attempt = f"{random_start}{problem_ID}apoj{len(attempts)+1}{correct_indicator}{random_end}{input.ID()}"
-
-
-attempts.append(f"{datetime.now()}, {encoded_attempt}\n")
-
-    @session.download(
-        filename=lambda: f"Problem_Log-{problem_ID}-{input.ID()}.csv"
-    )
+    @session.download(filename=lambda: f"Problem_Log-{problem_ID}-{input.ID()}.csv")
     async def download():
-        # This version uses a function to generate the filename. It also yields data
-        # multiple times.
-        yield "Timestamp,Encoded Attempt\n"
-   
-        for attempt in attempts:
-          await asyncio.sleep(0.25) 
-          yield attempt
+        # Start the CSV with the encoded attempt (without label)
+        final_encoded = session.encoded_attempt() if session.encoded_attempt is not None else "No attempts"
+        yield f"{final_encoded}\n\n"
+        
+        # Write the header for the remaining CSV data once
+        yield "Timestamp,Attempt,Answer,Feedback\n"
+        
+        # Write the attempts data, ensure that the header from the attempts list is not written again
+        for attempt in attempts[1:]:  # Skip the first element which is the header
+            await asyncio.sleep(0.25)  # This delay may not be necessary; adjust as needed
+            yield attempt
 
+
+# App installation
 app = App(app_ui, server)
 
 ```
